# oadcs-project

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  orbit.csv
archive/: DirectionCosineAtt.h  EulerAngleAtt.h  QuaternionAtt.h  attitude.cpp  attitude.h
assets/: EGM84.txt
include/: AdaptiveIntegrators.h  CelestialBody.h  DirectionCosineAtt.h  FixedIntegrators.h  QuaternionAtt.h  attitude.h  body.h  celestial.h  constants.h  gravity.h  integrator.h  satellite.h  test.hpp  translational.h  typedefs.h  units.h
src/: attitude.cpp  main.cpp  test.cpp  translational.cpp
